Manifests/reactapp/postgrescipserv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: training
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: pgmodule
