Manifests/reactapp/rediscipserv.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: training
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redismodule
