Manifests/reactapp/fib-ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: training
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000

      - path: /fibo
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000
